--- a/static/css/style.css
+++ b/static/css/style.css
@@ -67,6 +67,7 @@ body {
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-weight: 700;
+  margin: 55px 0 8px 0;
   font-family: "Roboto", sans-serif;
   color: #1d2746;
 }
