--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3619,9 +3619,9 @@ ul.list-style li:last-child {
 .nav-sidebar .nav-item:hover .icon, .nav-sidebar .nav-item.active .icon {
   color: #10b3d6;
 }
-.nav-sidebar .nav-item.active .icon {
+/* .nav-sidebar .nav-item.active .icon {
   transform: rotate(-180deg);
-}
+} */
 .nav-sidebar .nav-item .dropdown_nav {
   padding-left: 32px !important;
   margin-bottom: 0;
