The website is now able to parse inline and block maths and render them properly.

--- a/templates/file-display.html
+++ b/templates/file-display.html
@@ -1,13 +1,58 @@
 {% extends 'doc-base.html' %}
 {% load static %}
 
+{% block breadcrumb %}
+<section class="breadcrumb_area">
+    <img class="p_absolute bl_left" src="{% static 'img/v.svg' %}" alt="">
+    <img class="p_absolute bl_right" src="{% static 'img/home_one/b_leaf.svg' %}" alt="">
+    <img class="p_absolute star" src="{% static 'img/home_one/banner_bg.png' %}" alt="">
+    <img class="p_absolute wave_shap_one" src="{% static 'img/blog-classic/shap_01.png' %}" alt="">
+    <img class="p_absolute wave_shap_two" src="{% static 'img/blog-classic/shap_02.png' %}" alt="">
+    <img class="p_absolute one wow fadeInRight" src="{% static 'img/home_one/b_man_two.png' %}" alt="">
+    <img class="p_absolute two wow fadeInUp" data-wow-delay="0.2s" src="{% static 'img/home_one/flower.png' %}" alt="">
+    <div class="container custom_container">
+        <form action="#" class="banner_search_form banner_search_form_two">
+            <div class="input-group">
+                <input type="search" class="form-control" placeholder='Search ("/" to focus)'>
+                <div class="input-group-append">
+                    <select class="custom-select" id="inlineFormCustomSelect">
+                        <option selected>All Category</option>
+                        <option value="1">Doc Archive</option>
+                        <option value="2">Doc List</option>
+                        <option value="3">KbDoc</option>
+                    </select>
+                </div>
+                <button type="submit"><i class="icon_search"></i></button>
+            </div>
+        </form>
+    </div>
+</section>
+{% endblock breadcrumb %}
+
+
 {% block folder-tree %}
 
-
 <div id="post" class="documentation_info">
-    <article class="documentation_body" id="documentation">
-            {{ file_contents | safe }}
-        </article>
-    </div>
+    {{ file.main_content | safe }}
+    {% comment %} <article class="documentation_body" id="documentation">
+        </article> {% endcomment %}
+</div>
 
+<script>
+    MathJax = {
+        tex: {
+          inlineMath: [['$', '$'], ['\\(', '\\)']]
+        },
+        svg: {
+          fontCache: 'global'
+        }
+      };
+      function processMath() {
+          MathJax.typeset([".math"])
+        }
+        $(window).ready(
+            {% comment %} print("Manners") {% endcomment %}
+            MathJax.typeset([".math"])
+      )
+</script>
 {% endblock folder-tree %}
