--- a/templates/folder-tree.html
+++ b/templates/folder-tree.html
@@ -46,9 +46,9 @@
     </article>
     <div class="scroll">
         <ul class="list-unstyled nav-sidebar" style="overflow: auto">
-            <li class="nav-item">
+            {% comment %} <li class="nav-item">
                 <a href="doclist.html" class="nav-link"><img src="img/side-nav/home.png" alt="">Home</a>
-            </li>
+            </li> {% endcomment %}
             {% comment %} <li class='nav-item subfolder'>
                 <a href='#' class='nav-link'>
                     <img class="flat-icon" src="img/side-nav/folder.png" alt='folder'>
