--- a/templates/doc-base.html
+++ b/templates/doc-base.html
@@ -22,7 +22,6 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
-    <script src="{% static 'js/jstree.min.js' %}"></script>
 
     <title>KbDoc</title>
 </head>
@@ -565,31 +564,33 @@
                 </div>
             </div>
         </div>
-        <section class="breadcrumb_area">
-            <img class="p_absolute bl_left" src="{% static 'img/v.svg' %}" alt="">
-            <img class="p_absolute bl_right" src="{% static 'img/home_one/b_leaf.svg' %}" alt="">
-            <img class="p_absolute star" src="{% static 'img/home_one/banner_bg.png' %}" alt="">
-            <img class="p_absolute wave_shap_one" src="{% static 'img/blog-classic/shap_01.png' %}" alt="">
-            <img class="p_absolute wave_shap_two" src="{% static 'img/blog-classic/shap_02.png' %}" alt="">
-            <img class="p_absolute one wow fadeInRight" src="{% static 'img/home_one/b_man_two.png' %}" alt="">
-            <img class="p_absolute two wow fadeInUp" data-wow-delay="0.2s" src="{% static 'img/home_one/flower.png' %}" alt="">
-            <div class="container custom_container">
-                <form action="#" class="banner_search_form banner_search_form_two">
-                    <div class="input-group">
-                        <input type="search" class="form-control" placeholder='Search ("/" to focus)'>
-                        <div class="input-group-append">
-                            <select class="custom-select" id="inlineFormCustomSelect">
-                                <option selected>All Category</option>
-                                <option value="1">Doc Archive</option>
-                                <option value="2">Doc List</option>
-                                <option value="3">KbDoc</option>
-                            </select>
+        {% block breadcrumb %}
+            <section class="breadcrumb_area">
+                <img class="p_absolute bl_left" src="{% static 'img/v.svg' %}" alt="">
+                <img class="p_absolute bl_right" src="{% static 'img/home_one/b_leaf.svg' %}" alt="">
+                <img class="p_absolute star" src="{% static 'img/home_one/banner_bg.png' %}" alt="">
+                <img class="p_absolute wave_shap_one" src="{% static 'img/blog-classic/shap_01.png' %}" alt="">
+                <img class="p_absolute wave_shap_two" src="{% static 'img/blog-classic/shap_02.png' %}" alt="">
+                <img class="p_absolute one wow fadeInRight" src="{% static 'img/home_one/b_man_two.png' %}" alt="">
+                <img class="p_absolute two wow fadeInUp" data-wow-delay="0.2s" src="{% static 'img/home_one/flower.png' %}" alt="">
+                <div class="container custom_container">
+                    <form action="#" class="banner_search_form banner_search_form_two">
+                        <div class="input-group">
+                            <input type="search" class="form-control" placeholder='Search ("/" to focus)'>
+                            <div class="input-group-append">
+                                <select class="custom-select" id="inlineFormCustomSelect">
+                                    <option selected>All Category</option>
+                                    <option value="1">Doc Archive</option>
+                                    <option value="2">Doc List</option>
+                                    <option value="3">KbDoc</option>
+                                </select>
+                            </div>
+                            <button type="submit"><i class="icon_search"></i></button>
                         </div>
-                        <button type="submit"><i class="icon_search"></i></button>
-                    </div>
-                </form>
-            </div>
-        </section>
+                    </form>
+                </div>
+            </section>
+        {% endblock breadcrumb %}
         <section class="page_breadcrumb">
             <div class="container custom_container">
                 <div class="row">
@@ -709,11 +710,6 @@
                             <i class="arrow_carrot-right"></i>
                         </div>
                         <div class="doc_rightsidebar scroll">
-                            <select id="mySelect" name="os">
-                                <option value="windows" data-content="<i class='fab fa-windows'></i> Windows">Windows</option>
-                                <option value="ios" data-content="<i class='fab fa-apple'></i> Ios">Ios</option>
-                                <option value="linux" data-content="<i class='fab fa-linux'></i> Linux">Linux</option>
-                            </select>
                             <div id="font-switcher" class="d-flex justify-content-between align-items-center">
                                 <div id="rvfs-controllers" class="fontsize-controllers group"></div>
                                 <a href="javascript:window.print()" class="print"><i class="icon_printer"></i></a>
@@ -723,7 +719,7 @@
                                 <input type="checkbox" name="something" id="something" class="tab_switcher">
                                 <label for="something" class="tab-btn"><i class="far fa-moon"></i></label>
                             </div>
-                            <h6>On this page:</h6>
+                            <h6>Table of Contents</h6>
                             <nav class="list-unstyled doc_menu" id="navbar-example3">
                                 <a href="#documentation" class="nav-link active">Documentation</a>
                                 <a href="#getting" class="nav-link">Getting started</a>
@@ -821,6 +817,8 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js' %}, then Bootstrap JS -->
     <script src="{% static 'js/pre-loader.js' %}"> </script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
     <script src="{% static 'assets/bootstrap/js/popper.min.js' %}"></script>
     <script src="{% static 'assets/bootstrap/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'assets/bootstrap/js/bootstrap-select.min.js' %}"></script>
