--- a/templates/doc-base.html
+++ b/templates/doc-base.html
@@ -828,7 +828,7 @@
     <script src="{% static 'js/anchor.js' %}"></script>
     <script src="{% static 'assets/wow/wow.min.js' %}"></script>
     <script src="{% static 'assets/prism/prism.js' %}"></script>
-    <script src="{% static 'assets/mailchimp/plugins.js' %}"></script>
+    {% comment %} <script src="{% static 'assets/mailchimp/plugins.js' %}"></script> {% endcomment %}
     <script src="{% static 'assets/niceselectpicker/jquery.nice-select.min.js' %}"></script>
     <script src="{% static 'assets/mcustomscrollbar/jquery.mCustomScrollbar.concat.min.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
