I have completed sections 1,2, and 3 of the readme file. Next up is section 4.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9752,3 +9752,16 @@ blockquote .author {
   padding: 4px 12px;
   margin-right: 10px;
 }
+
+ul.contains-task-list {
+  list-style: none;
+  padding-left: unset;
+}
+
+ul.contains-task-list li.task-list-item input {
+  margin-right: 7px;
+}
+
+ul.contains-task-list li.task-list-item input:checked {
+  border-color: #0066fe;
+}
