In my last commit, I had done the UI for the folder tree page. Next up is to add a model field to store the dictionary for each folder object and work based on that dictionary and also to do the form logic for filtering.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9796,3 +9796,16 @@ ul.contains-task-list li.task-list-item input:checked {
 .short-by {
   text-transform: capitalize;
 }
+
+.folder-name {
+  text-transform: capitalize;
+}
+
+.community-post.folder {
+  background-color: #cdf1d4 !important;
+}
+
+.folder-index-img {
+  width: 25px;
+  margin-right: 15px;
+}
