--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9809,3 +9809,8 @@ ul.contains-task-list li.task-list-item input:checked {
   width: 25px;
   margin-right: 15px;
 }
+
+.parent-link {
+  font-size: 15px !important;
+  color: #1d2746;
+}
