--- a/templates/folder-tree.html
+++ b/templates/folder-tree.html
@@ -8,7 +8,19 @@
         <div class="support-info">
             <ul class="support-total-info">
                 <li class="d-flex align-items-center">
-                    <img class='folder-index-img' src='{% static 'img/my-static/folder (4).png' %}'><a href="#"><h4 class="m-0">{{ folder_name }}</h4></a>
+                    <img class='folder-index-img' src='{% static 'img/my-static/folder (4).png' %}'>
+                    <a class='parent-link' href="
+                    {% if folder.parent.get_url_path != '' %}
+                        {% url 'show-content' folder.parent.get_url_path %}
+                    {% else %}
+                        {% url 'home' %}
+                    {% endif %}">
+                        {{ folder.parent.presentable_name }}
+                    </a>
+                    &nbsp; / &nbsp;
+                    <a href="#">
+                        <h4 class="m-0">{{ folder_name }}</h4>
+                    </a>
                 </li>
             </ul>
         </div>
@@ -120,7 +132,7 @@
                     <div class="entry-content">
                         <h3 class="post-title mt-0 folder-name">
                             <a href="{% url 'show-content' folder.get_url_path %}">
-                                {{ folder.name }}
+                                {{ folder.presentable_name }}
                             </a>
                         </h3>
                         <a class="badge color-ass" href="{% url 'show-content' folder.get_url_path %}">{{ folder.file_count }}{% if folder.file_count > 1 %} Files {% else %} File {% endif %}</a>
@@ -134,7 +146,7 @@
                 <div class="post-content">
                     <div class="entry-content">
                         <h3 class="post-title mt-0">
-                            <a href="forum-single.html">
+                            <a href="{% url 'show-content' file.get_url_path %}">
                                 {{ file.title }}
                             </a>
                         </h3>
