--- a/templates/folder-tree.html
+++ b/templates/folder-tree.html
@@ -216,6 +216,33 @@
                                     <a class="badge color-green" href="{% url 'tag' tag.name %}">{{ tag.name }}</a>
                                 {% endfor %}
                             </div>
+                            <div class="list-unstyled ticket_categories my-2">
+                            {% if file.note_type.name == 'papers' %}
+                                <li class="py-1">
+                                    <a><strong><em>Year:</em></strong> 
+                                        {% if file.papers.bibtex.year == "" %} 
+                                            {{ file.date_modified }} 
+                                        {% else %} 
+                                            {{ file.papers.bibtex.year }} 
+                                        {% endif %} 
+                                    </a>
+                                </li>
+                                {% if file.papers.bibtex.journal != "" %}
+                                    <li class="py-1">
+                                        <a><strong><em>Journal:</em></strong> 
+                                            {{ file.papers.bibtex.journal }} 
+                                        </a>
+                                    </li>
+                                {% endif %}
+                                {% if file.papers.bibtex.author != "" %}
+                                    <li class="py-1">
+                                        <a><strong><em>Authors:</em></strong> 
+                                            {{ file.papers.bibtex.author }} 
+                                        </a>
+                                    </li>
+                                {% endif %}
+                            {% endif %}
+                            </div>
                             <ul class="meta">
                                 <li><i class="icon_calendar"></i>Updated {{ file.date_modified }}</li>
                             </ul>
@@ -225,7 +252,7 @@
             {% endfor %}
         {% endif %}
     </div>
-    <article class="documentation_body py-0" id="documentation">
+    {% comment %} <article class="documentation_body py-0" id="documentation">
         <h3>{{ folder_name }}</h3>
         <div class='file-list'>
             {% for file in folder.subfiles %}
@@ -236,8 +263,8 @@
                 <p class='pl-4'> {{ file.tags.name }} </p>
             {% endfor %}
         </div>
-    </article>
-    <div class="scroll mt-5 pt-5">
+    </article> {% endcomment %}
+    <div class="scroll mt-5 pt-2">
         <ul class="list-unstyled nav-sidebar" style="overflow: auto">
             {% comment %} <li class="nav-item">
                 <a href="doclist.html" class="nav-link"><img src="img/side-nav/home.png" alt="">Home</a>
