I have finished setting up the website for deployment.

--- a/templates/folder-tree.html
+++ b/templates/folder-tree.html
@@ -19,7 +19,9 @@
                     </a>
                     &nbsp; / &nbsp;
                     <a href="#">
-                        <h4 class="m-0">{{ folder_name }}</h4>
+                        <h4 class="m-0">
+                            {{ folder_name }}
+                        </h4>
                     </a>
                 </li>
             </ul>
