--- a/templates/doc-base.html
+++ b/templates/doc-base.html
@@ -32,11 +32,10 @@
             <div class="round_spinner">
                 <div class="spinner"></div>
                 <div class="text">
-                    <img src="{% static 'img/spinner_logo.png' %}" alt="">
-                    <h4><span>kb</span>Doc</h4>
+                    <img class="logo-img" src="{% static 'img/my-static/folders.png' %}" alt="">
+                    <h4><span>Personal</span>&nbsp;Notes</h4>
                 </div>
             </div>
-            <h2 class="head">Did You Know?</h2>
             <p></p>
         </div>
     </div>
